# rgb-scheduler

./: .gitignore  LICENSE.md  README.md  config.example.ini  config.ini  generate_password.py  pyproject.toml  requirements.txt  rgb_scheduler.py  run_hidden.vbs  run_task.bat  wake_up_handler.bat  web_server.py
deployment/: run_hidden.vbs  run_task.bat  wake_up_handler.bat
rgb_scheduler/: config_utils.py  hue_utils.py  logging_utils.py  path_utils.py  process_utils.py  scheduler.py  signalrgb_utils.py  web_server.py
scripts/: generate_password.py
static/: login.css  main.css
templates/: index.html  login.html
